<resources>
    <string name="app_name">AndroidBeginners</string>
    <string name="count">Count</string>
    <string name="counter_increase">Counter: %1$d</string>
    <string name="counter_default">Counter: 0</string>
    <string name="go_to_activity_2">Go To Activity 2</string>

    <string name="fragment_default">Fragment Default</string>
    <string name="fragment_dynamic">Fragment Dynamic</string>

    <string name="product_brand">Brand: %1$s</string>
    <string name="product_ulasan">%1$d ulasan </string>
    <string name="seller_name">Blibli.com</string>
    <string name="seller_nilai">Penilaian %1$d/100</string>
    <string name="seller_kota">Kota %1$s</string>

    <string name="blibli_reward">%1$d points</string>
    <string name="blibli_info"><u>Info</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
